# s3exporter

./: .dockerignore  .gitlab-ci.yml  .yamllint.yml  Cargo.toml  README.md
ops/docker/: Dockerfile
ops/helm/: .sops.yaml  Chart.yaml  values-feature.yaml  values-testing.yaml  values.yaml
ops/helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  probe.yaml  prometheusrule.yaml  service.yaml  serviceaccount.yaml
ops/helm/templates/tests/: test-connection.yaml
src/: main.rs
